--- a/style.css
+++ b/style.css
@@ -38,6 +38,22 @@ iframe#tela{
    position: relative;
    top: 80px;
    left: 22px; 
-   width: 269px;
-   height: 471px;
+   width: 267px;
+   height: 470px;
+}
+section.redes-sociais{
+    text-align: right;
+}
+
+section.redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.342);
+    box-sizing: border-box;
+    transition-duration: 0.5s;
+}
+section.redes-sociais img:hover{
+    transform: translate(-3px,-3px);
+    box-shadow: 5px 5px 10px rgb(0, 0, 0);
 }
